--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
         
 
-        <a href="http://127.0.0.1:5500/working.html"><button id="sim"> Sim!</button>
+        <a href="working.html"><button id="sim"> Sim!</button></a>
+
         <button onmouseover="fuja()" id="nao"> Não!</button>
 
         
@@ -84,3 +85,4 @@
 
 </body>
 </html>
+
