--- a/working.html
+++ b/working.html
@@ -29,9 +29,10 @@
 <body>
     
     <div class="painel">
-        <h1>Ótimo, vamos sair hoje! kkkkkkkk</h1>
-        <h2>Bom, eu planejei da gente ir para o bistrô, as 19:30 ~ 20:00, eu te buscaria na sua casa e iriamos para lá.</h2>
-        <h3>Mas se tiver alguma sugestão de lugar, que você gostaria de ir, pode me dizer.</h3>
+        <h1>Que ótimo, vamos sair hoje! 😄</h1>
+        <h2>Planejei a gente ir ao bistrô entre 19:30 e 20:00. Eu posso passar na sua casa e te buscar.</h2>
+        <h3>Se tiver alguma sugestão de lugar que você queira ir, me conta! 😊</h3>
+
         
         <img src="https://mega.ibxk.com.br/2020/02/12/a-12150750350377.gif?ims=fit-in/800x500" alt="">
 
@@ -46,4 +47,5 @@
 
 </body>
 </html>
+
 
