--- a/working.html
+++ b/working.html
@@ -29,9 +29,9 @@
 <body>
     
     <div class="painel">
-        <h1>Que ótimo, vamos sair hoje! 😄</h1>
+        <h1>Que ótimo, vamos sair hoje! kkkkkk</h1>
         <h2>Planejei a gente ir ao bistrô entre 19:30 e 20:00. Eu posso passar na sua casa e te buscar.</h2>
-        <h3>Se tiver alguma sugestão de lugar que você queira ir, me conta! 😊</h3>
+        <h3>Se tiver alguma sugestão de lugar que você queira ir, pode me falar viu?!</h3>
 
         
         <img src="https://mega.ibxk.com.br/2020/02/12/a-12150750350377.gif?ims=fit-in/800x500" alt="">
@@ -47,6 +47,7 @@
 
 </body>
 </html>   
+
 
 
 
